all non-webDAV methods finished, basic JSDocs added with Makefile
